<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_activity_activity2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="be.yannickvanhecke.activities.activity_activity2"
    tools:showIn="@layout/activity_activity2">

    <TextView android:id="@+id/txttitleactivitytwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_activity2"/>

    <TextView android:id="@+id/txtoncreateactivitytwo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/onCreate"
              android:layout_below="@id/txttitleactivitytwo"/>

    <TextView android:id="@+id/txtondestroyactivitytwo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/onDestroy"
              android:layout_below="@id/txtoncreateactivitytwo"/>

    <TextView android:id="@+id/txtonpauseactivitytwo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/onPause"
              android:layout_below="@id/txtondestroyactivitytwo"/>

    <TextView android:id="@+id/txtonrestartactivitytwo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/onRestart"
              android:layout_below="@id/txtonpauseactivitytwo"/>

    <TextView android:id="@+id/txtonresumeactivitytwo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/onResume"
              android:layout_below="@id/txtonrestartactivitytwo"/>

    <TextView android:id="@+id/txtonstartactivitytwo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/onStart"
              android:layout_below="@+id/txtonresumeactivitytwo"
              />

    <TextView android:id="@+id/txtonstopactivitytwo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/onStop"
              android:layout_below="@id/txtonstartactivitytwo"
              />

    <Button android:id="@+id/btnCloseActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/closeActivityTwo"
            android:layout_below="@id/txtonstopactivitytwo"
            />



</RelativeLayout>
