<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_activity1"/>

    <TextView android:id="@+id/txtcreate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/onCreate" />

    <TextView android:id="@+id/txtstart"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/onStart"
              android:layout_below="@id/txtcreate"/>

    <TextView android:id="@+id/txtresume"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/onResume"
              android:layout_below="@id/txtstart"/>

    <TextView android:id="@+id/txtrestart"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/onRestart"
              android:layout_below="@id/txtrestart"/>

    <Button android:id="@+id/bLaunchActivityTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_below="@id/txtrestart"/>

</LinearLayout>
